# GitBanshee

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: build.yml  check.yml
docs/: ai-integration.md  architecture.md  build-and-distribution.md  design.pen  design2.fig  development-workflow.md  frontend-architecture.md  git-engine.md  graph-layout.md  prototype.html  roadmap.md  theme-system.md
engine/: tauri.conf.json
engine/capabilities/: default.json
engine/src/: lib.rs  main.rs
scripts/: build.mjs  dev.mjs  vcenv.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: avatar.rs  lib.rs
src-tauri/src/commands/: mod.rs  repo.rs  watcher.rs  write.rs
src-tauri/src/git/: branch.rs  engine.rs  graph.rs  mod.rs  remote.rs  stash.rs  worktree.rs
src-tauri/src/graph/: color.rs  graph.rs  layout.rs  mod.rs  path.rs  sort.rs  types.rs
src-tauri/src/models/: branch.rs  commit.rs  cross_connection.rs  diff.rs  graph.rs  lane_span.rs  mod.rs  remote.rs  stash.rs  status.rs  tag.rs
src/components/: AIPanel.tsx  BranchColumn.tsx  BranchDialog.tsx  BranchSelector.tsx  CommitDetails.tsx  CommitGraph.tsx  ContextMenu.tsx  DiffSkeleton.tsx  DiffViewer.tsx  FileExplorer.tsx  GraphCanvas.tsx  GraphColumn.tsx  IconButton.tsx  LeftPanel.tsx  MessageColumn.tsx  PanelHeader.tsx  RebaseDialog.tsx  RepoCard.tsx  RepoList.tsx  RepoListDialog.tsx  (+11 more)
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+39 files in other folders)
