[package]
name = "gitbanshee"
version = "0.4.0"
description = "A Git visualization desktop app with native AI integration"
authors = ["Kecheng Zhang"]
edition = "2021"
default-run = "gitbanshee"

[lib]
name = "gitbanshee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
md5 = "0.7"
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }

[[bin]]
name = "create_mock_repo"
path = "src/bin/create_mock_repo.rs"
